outputs/generated_env/kubernetes/network_policies/cybersim-subnet-2-allow-kibana-to-elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: cyberbattlesim
    cybersim/generated: 'true'
  name: allow-kibana-to-elasticsearch
  namespace: cybersim-subnet-2
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cybersim-subnet-1
      podSelector:
        matchLabels:
          app.kubernetes.io/name: kibana
    ports:
    - port: 9254
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: elasticsearch
  policyTypes:
  - Ingress
